--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 <body>
    
     <div class="name">
-        <h1>HARSHIT DAYAL</h1>
+        HARSHIT DAYAL
     </div>
    
     <div class="center">
